question css complete

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/app.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 <body>
 <main class="container">
     <div class="row">
-    <h1 class="col" id="title">Video Game Trivia</h1>
+        <h1 class="col" id="title">Video Game Trivia</h1>
+    </div>
+    <div class="container" id="content">
+        <p class="row" id="question">This is a sample question used to get the css in order</p>
+        <button class="btn row" id="option-A">This is the first possible answer</button><br>
+        <button class="btn row" id="option-B">This is the second possible answer</button><br>
+        <button class="btn row" id="option-C">This is the third possble answer</button><br>
+        <button class="btn row selected" id="option-D">This is the fourth possible answer it is selected</button><br>
+        <button class="btn row" id="submit">SUBMIT</button>
     </div>
 </main> 
 </body>
