--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <h1 class="col" id="title">Video Game Trivia</h1>
     </div>
     <div class="container" id="content">
-        <p class="row" id="question">This is a sample question used to get the css in order</p>
-        <button class="btn row" id="option-A">This is the first possible answer</button><br>
-        <button class="btn row" id="option-B">This is the second possible answer</button><br>
-        <button class="btn row" id="option-C">This is the third possble answer</button><br>
-        <button class="btn row selected" id="option-D">This is the fourth possible answer it is selected</button><br>
-        <button class="btn row" id="submit">SUBMIT</button>
+        <p class="row" id="question">blah blah instructions blah blah just click start</p>
+        <button class="btn row answer" id="option-A">This is the first possible answer</button><br>
+        <button class="btn row answer" id="option-B">This is the second possible answer</button><br>
+        <button class="btn row answer" id="option-C">This is the third possble answer</button><br>
+        <button class="btn row answer" id="option-D">This is the fourth possible answer it is selected</button><br>
+        <button class="btn row end-btn" id="submit" style="display: none;">SUBMIT</button>
+        <button class="btn row end-btn" id="start">START</button>
+        <button class="btn row end-btn" id="next" style="display: none;">NEXT</button>
+        <button class="btn row end-btn" id="finish" style="display: none;">GET RESULTS</button>
     </div>
 </main> 
 </body>
