--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <h1 class="col" id="title">Video Game Trivia</h1>
     </div>
     <div class="container" id="content">
-        <p class="row" id="question">blah blah instructions blah blah just click start</p>
-        <button class="btn row answer" id="option-A">This is the first possible answer</button><br>
-        <button class="btn row answer" id="option-B">This is the second possible answer</button><br>
-        <button class="btn row answer" id="option-C">This is the third possble answer</button><br>
-        <button class="btn row answer" id="option-D">This is the fourth possible answer it is selected</button><br>
+        <p class="row" id="question">This trivia game will quiz you on your video game knowledge! You have 30 seconds to answer 5 multiple choice questions. Once you've selected your answer click next to move on to the next question. <br><br> Click start to begin!</p>
+        <button class="btn row answer" id="opt-A" value="A">This is the first possible answer</button><br>
+        <button class="btn row answer" id="opt-B" value="B">This is the second possible answer</button><br>
+        <button class="btn row answer" id="opt-C" value="C">This is the third possble answer</button><br>
+        <button class="btn row answer" id="opt-D" value="B">This is the fourth possible answer it is selected</button><br>
         <button class="btn row end-btn" id="submit" style="display: none;">SUBMIT</button>
+        <p class = "row" id = "timer">Time Remaing: 30 seconds</p>
         <button class="btn row end-btn" id="start">START</button>
         <button class="btn row end-btn" id="next" style="display: none;">NEXT</button>
         <button class="btn row end-btn" id="finish" style="display: none;">GET RESULTS</button>
