Maybe fixed issue with not working in edge?

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="btn row answer" id="opt-B" value="B">This is the second possible answer</button><br>
         <button class="btn row answer" id="opt-C" value="C">This is the third possble answer</button><br>
         <button class="btn row answer" id="opt-D" value="B">This is the fourth possible answer it is selected</button><br>
-        <button class="btn row end-btn" id="submit" style="display: none;">SUBMIT</button>
+        <button class="btn row end-btn" id="submit">SUBMIT</button>
         <p class = "row" id = "timer">Time Remaing: 30 seconds</p>
         <button class="btn row end-btn" id="start">START</button>
         <button class="btn row end-btn" id="next" style="display: none;">NEXT</button>
