--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="btn row answer" id="opt-A" value="A">This is the first possible answer</button><br>
         <button class="btn row answer" id="opt-B" value="B">This is the second possible answer</button><br>
         <button class="btn row answer" id="opt-C" value="C">This is the third possble answer</button><br>
-        <button class="btn row answer" id="opt-D" value="B">This is the fourth possible answer it is selected</button><br>
+        <button class="btn row answer" id="opt-D" value="D">This is the fourth possible answer it is selected</button><br>
         <button class="btn row end-btn" id="submit">SUBMIT</button>
         <p class = "row" id = "timer">Time Remaing: 30 seconds</p>
         <button class="btn row end-btn" id="start">START</button>
